<resources>
    <string name="app_name">ActivityTimer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="saveTask">Save</string>
    <string name="taskName">Task</string>
    <string name="create_subtask">Create Subtask</string>
    <string name="task">Task</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="duration">Duration</string>
    <string name="create_task">Create Task</string>
    <string name="well_done">Well Done!</string>
    <string name="reps_count_of_all">%d / %d</string>
    <string name="automatic_play">Automatic Play</string>
    <string name="category">Category</string>
    <string name="add_category">Add category</string>
    <string name="to_subtask">Subtask it</string>
    <string name="label_later">Label later</string>
    <string name="label_all_later">Label All Later</string>
    <string name="duration_distribution">%d active task execution\n%d breaks</string>
    <plurals name="reps_count">
        <item quantity="zero">1 rep</item>
        <item quantity="one">%d rep</item>
        <item quantity="other">%d reps</item>
    </plurals>
    <string name="break_before">Break: %s</string>
    <string name="tasks">Tasks</string>
    <string name="timer">Timer</string>
    <string name="results">Results</string>
    <string name="subtask">Subtask</string>
    <string name="break_before_subtask">Break Before Subtask</string>
    <string name="number_of_repetitions">Number of repetitions</string>
    <string name="finish_task">Finish Task</string>
</resources>