<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.activitytimer.screens.createTask.viewModels.CreateSubtaskViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="355dp"
            android:layout_height="88dp"
            android:text="@={viewModel.subtask.name}"
            android:hint="@string/task"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_times"
            android:ems="10"
            android:inputType="number"/>

        <CheckBox
            android:id="@+id/creation_chb_automatic_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatic_play" />

        <EditText
            android:id="@+id/editTextBreakInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/before_break_interval"
            android:inputType="number"/>

        <Button
            android:id="@+id/button"
            android:layout_width="386dp"
            android:layout_height="82dp"
            android:layout_marginBottom="16dp"
            android:text="@string/saveTask"
            android:onClick="@{() -> viewModel.addSubtask()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_label_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_later"
            android:visibility="gone"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/button_label_all_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_all_later"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>
</layout>